# nicopad

./: .gitignore  CMakeLists.txt  Cargo.toml  Main.qml  README.md  appmgr.cpp  appmgr.h  cookiemgr.cpp  cookiemgr.h  favmgr.cpp  favmgr.h  live_preview.bat  live_preview.sh  loginmgr.cpp  loginmgr.h  main.cpp  videolistmodel.cpp  videolistmodel.h
.github/workflows/: qt.yml
components/: Fav.qml  User.qml  VItem.qml  VList.qml
design/nicopad/: App.tsx  README.md  constants.ts  index.html  index.tsx  metadata.json  package-lock.json  package.json  types.ts
design/nicopad/components/: DesignInspector.tsx  PlayerControls.tsx  SettingsView.tsx  Sidebar.tsx  SongList.tsx
design/nicopad/components/ui/: Slider.tsx
models/: favitem.cpp  favitem.h  videoitem.cpp  videoitem.h
src/: main.rs
src/api/: fav.rs  mod.rs  qrcode.rs  user.rs  video.rs
ui/: app-window.slint  types.slint
ui/components/: fav-list.slint  logo.slint  play-controls.slint  play-list.slint  title.slint  user.slint
